@@ -1610,51 +1610,6 @@ name|getIndexingChain
 argument_list|()
 argument_list|)
 expr_stmt|;
-name|conf
-operator|.
-name|setIndexingChain
-argument_list|(
-operator|new
-name|MyIndexingChain
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|assertEquals
-argument_list|(
-name|MyIndexingChain
-operator|.
-name|class
-argument_list|,
-name|conf
-operator|.
-name|getIndexingChain
-argument_list|()
-operator|.
-name|getClass
-argument_list|()
-argument_list|)
-expr_stmt|;
-try|try
-block|{
-name|conf
-operator|.
-name|setIndexingChain
-argument_list|(
-literal|null
-argument_list|)
-expr_stmt|;
-name|fail
-argument_list|()
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|IllegalArgumentException
-name|e
-parameter_list|)
-block|{
-comment|// ok
-block|}
 try|try
 block|{
 name|conf
